@@ -4,18 +4,25 @@ import com.example.demo.dto.AuthRequest;
 import com.example.demo.dto.AuthResponse;
 import com.example.demo.model.User;
 import com.example.demo.repository.UserRepository;
+import com.example.demo.security.JwtTokenProvider;
 import com.example.demo.service.UserService;
+import org.springframework.stereotype.Service;
 
-import java.util.Set;
+import java.util.Collections;
 
+@Service
 public class UserServiceImpl implements UserService {
 
     private final UserRepository userRepository;
+    private final JwtTokenProvider jwtTokenProvider;
 
-    public UserServiceImpl(UserRepository userRepository) {
+    public UserServiceImpl(UserRepository userRepository,
+                           JwtTokenProvider jwtTokenProvider) {
         this.userRepository = userRepository;
+        this.jwtTokenProvider = jwtTokenProvider;
     }
 
+    // ✅ MATCHES UserService EXACTLY
     @Override
     public AuthResponse registerUser(AuthRequest request) {
 
@@ -26,18 +33,20 @@ public class UserServiceImpl implements UserService {
         User user = new User();
         user.setEmail(request.getEmail());
         user.setPassword(request.getPassword());
-        user.setRoles(Set.of("ROLE_USER"));
+        user.setRoles(Collections.singleton("USER"));
 
-        userRepository.save(user);
+        User saved = userRepository.save(user);
 
-        return new AuthResponse(
-                "dummy-token",
-                user.getId(),
-                user.getEmail(),
-                user.getRoles()
+        String token = jwtTokenProvider.generateToken(
+                saved.getId(),
+                saved.getEmail(),
+                saved.getRoles()
         );
+
+        return new AuthResponse(token);
     }
 
+    // ✅ MATCHES UserService EXACTLY
     @Override
     public AuthResponse loginUser(AuthRequest request) {
 
@@ -48,11 +57,12 @@ public class UserServiceImpl implements UserService {
             throw new RuntimeException("Invalid password");
         }
 
-        return new AuthResponse(
-                "dummy-token",
+        String token = jwtTokenProvider.generateToken(
                 user.getId(),
                 user.getEmail(),
                 user.getRoles()
         );
+
+        return new AuthResponse(token);
     }
 }
